# MonocularBiomechanics

./: .gitignore  README.md  main.py  monocular-demo.ipynb  pyproject.toml  utils.py
docs/: index.html
humanoid/: humanoid_torque_rl_no_rfc_no_warmstart.xml
monocular_demos/: camera.py  dataset.py  implicit_representation.py  utils.py
monocular_demos/biomechanics_mjx/: forward_kinematics.py  monocular_trajectory.py  visualize.py
monocular_demos/biomechanics_mjx/data/humanoid/: README.md  humanoid_muscle_rl.xml  humanoid_torque.xml  humanoid_torque_rl.xml  humanoid_torque_rl_no_rfc_v2.xml  humanoid_torque_torso.xml  humanoid_torque_vis.xml
