[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12,>=3.11"
dependencies = [
    "gradio",
    "plotly",
    "jax",
    "jaxlie",
    "jmp",
    "equinox",
    "tensorflow_hub",
    "mujoco-mjx",
    "opencv-python",
    "optax",
]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
